<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paypal.selion.pageobjectsdemoapp.PageObjectsHomeActivity" >

    <CheckBox
        android:id="@+id/android_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/android_checkbox_text" />

    <CheckBox
        android:id="@+id/ios_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/android_checkbox"
        android:layout_alignStart="@+id/android_checkbox"
        android:layout_below="@+id/android_checkbox"
        android:layout_marginTop="25dp"
        android:text="@string/ios_checkbox_text" />

    <TextView
        android:id="@+id/checkbox_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ios_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/checkbox_textview_output" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_textview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/seekBar_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/seekBar_textview_output" />

</RelativeLayout>
