<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.paypal.selion.pageobjectsdemoapp.PageObjectsHomeActivity" >

    <Button
        android:id="@+id/short_press_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/single_tap_button_name" />

    <TextView
        android:id="@+id/short_press_button_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/short_press_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/single_tap_button_output_value" />

    <Button
        android:id="@+id/long_press_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/short_press_button_output"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:longClickable="true"
        android:text="@string/double_tap_button_name" />

    <TextView
        android:id="@+id/long_press_button_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/long_press_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/double_tap_button_output_value" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/long_press_button_output"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

</RelativeLayout>